[package]
name = "glsl-quasiquote"
version = "0.2.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "The glsl! procedural macro, providing quasiquoting of the glsl crate."
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser", "proc-macro"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl-quasiquote"
repository = "https://github.com/phaazon/glsl-quasiquote"
documentation = "https://docs.rs/glsl-quasiquote"
readme = "README.md"

[badges]
travis-ci = { repository = "phaazon/glsl-quasiquote", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/glsl-quasiquote" }
is-it-maintained-open-issues = { repository = "phaazon/glsl-quasiquote" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
glsl = "0.10"
proc-macro2 = "0.4"
quote = "0.6"
